added fixes after review